# MicroPad-Core

./: .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INCLUDED.md  LICENSE  README.md  SECURITY.md  included.md  schema.xsd
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml
.run/: build.run.xml  lint.run.xml  start.run.xml  typecheck.run.xml  typecheck_watch.run.xml
app/: .gitignore  .yarnrc.yml  LICENCE.md  bun.lockb  config-overrides.js  cypress.json  eslint.config.ts  get_precache_files.py  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json
app/.run/: Template Jest.run.xml  typecheck.run.xml  typecheck_watch.run.xml
app/_build/: build.mts  build.ts  tsconfig.json
app/integration/: tsconfig.json
app/public/: index.html
app/src/: DifferenceEngine.ts  SearchWorker.js  SearchWorker.ts  SyncService.ts  SyncWorker.js  SyncWorker.ts  ThemeValues.ts  ToastEventHandler.ts  actions.ts  dialogs.ts  extraPrecacheFiles.ts  extra_precache_files.ts  index.css  index.tsx  react-app-env.d.ts  registerServiceWorker.ts  sentry.ts  service-worker.ts  serviceWorker.ts  shortcuts.ts  util.ts
examples/: Example Notepad.npx  Features.html  notepadStyle.css  test.mpx  test.npx  test.xml
libs/: build-libs.py
libs/asset-checksum/: Cargo.toml  README.md  tests.sh
libs/asset-checksum/src/: lib.rs
libs/asset-checksum/tests/: web.rs
libs/fend-wasm/: Cargo.toml  README.md
src/: package-lock.json  testParsing.py  tslint.json
src/ios/: config.xml  index.html  (+2 more)
(+1408 files in other folders)
