[package]
name = "asset-checksum"
version = "0.2.0"
authors = ["Nick Webster <nick@nick.geek.nz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2" }

crc = "1.8.1"
js-sys = "0.3.48"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
